--- a/GoEASy.csproj
+++ b/GoEASy.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\image\blogs\" />
+  </ItemGroup>
+
 </Project>
