Fix all database errors when scaffolding from the system

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=GoEasy;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=GoEasy2;User Id=sa;Password=123456;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
