Commit toàn bộ thay đổi

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EmailSettings": {
+    "From": "kietdtde180727@fpt.edu.vn",
+    "Password": "ycinbzdgrntxtslf"
+  }
 }
