Remove OpenAI API key

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,25 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=GoEasy;User Id=sa;Password=123456;TrustServerCertificate=True;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=GoEasy;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "OpenAI": {
+
+        "Endpoint": "https://api.openai.com/v1/chat/completions"
+    },
+    "MomoAPI": {
+        "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+        "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+        "AccessKey": "F8BBA842ECF85",
+        "ReturnUrl": "https://localhost:7034/Home/PaymentCallBack",
+        "NotifyUrl": "https://localhost:7034/Home/MomoNotify",
+        "PartnerCode": "MOMO",
+        "RequestType": "captureMoMoWallet"
+    },
+    "AllowedHosts": "*"
 }
