--- a/appsettings.json
+++ b/appsettings.json
@@ -21,5 +21,16 @@
         "PartnerCode": "MOMO",
         "RequestType": "captureMoMoWallet"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+
+    "EmailSettings": {
+    "From": "kietdtde180727@fpt.edu.vn",
+    "Password": "ycinbzdgrntxtslf"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "825404770214-t0rnrbukqg4ir489d2veatkkfr45jp11.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
