--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,8 @@
     },
     "OpenAI": {
 
-        "Endpoint": "https://api.openai.com/v1/chat/completions",
-        "ApiKey": ""
+        "Endpoint": "https://api.openai.com/v1/chat/completions"
+       
     },
     "MomoAPI": {
         "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
