--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,10 @@ FodyWeavers.xsd
 
 
 .env
+
+# Security - Ignore files with sensitive information
+appsettings.Development.json
+appsettings.Production.json
+**/secrets.json
+**/appsettings.*.json
+!appsettings.json
