--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,8 @@
         }
     },
     "OpenAI": {
-
-        "Endpoint": "https://api.openai.com/v1/chat/completions"
-       
+        "Endpoint": "https://api.openai.com/v1/chat/completions",
+        "ApiKey": "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"
     },
     "MomoAPI": {
         "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
